--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,9 @@ body {
   color: var(--color-foreground);
   font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+
+/* Disableing devtool tag */
+.TanStackRouterDevtools {
+  display: none !important;
+}
